# Simple-KAN-4-Time-Series

./: .gitignore  main.py  pyproject.toml
config/: config_hydra.yaml
results/classification/Chinatown/: formula_class_1.txt  formula_class_2.txt
results/classification/ECGFiveDays/: formula_class_1.txt  formula_class_2.txt
utils/: utils.py
