[tool.poetry]
name = "simple-kan-4-time-series"
version = "0.1.0"
description = ""
authors = ["xialugui <xialugui@139.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torch = "^2.3.1"
numpy = "^1.26.4"
pandas = "2.0.3"
scikit-learn = "1.3.1"
matplotlib = "^3.9.0"
aeon = "0.8.1"
omegaconf = "^2.3.0"
black = "^24.4.2"
pykan = "^0.0.5"
sympy = "^1.12.1"
tqdm = "^4.66.4"
pycatch22 = "^0.4.5"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"